@@ -1,5 +1,9 @@
 2007-06-13  Dalibor Topic  <robilad@kaffe.org>
 
+	* test/regression/Reflect.java: Simplified.
+
+2007-06-13  Dalibor Topic  <robilad@kaffe.org>
+
 	* test/regression/ProcessClassStop.java: Simplified.
 
 2007-06-13  Dalibor Topic  <robilad@kaffe.org>
